docs/4.1/GUI_USER_MANUAL.md
# 自转周期测量 GUI 用户手册

[English README](../../README_EN.md) | [项目首页](../../README.md)

本文面向第一次使用本项目 GUI 的用户，说明项目原理、界面操作、参数含义、配置注意事项和常见问题。GUI 入口为 `pyside_gui.py`（或 `python -m rotation_gui`）。

## 1. 项目原理概览

本项目用于构造一条“小行星雷达回波仿真到自转周期反演”的端到端流水线。流水线由三个相互独立的子模块组成，模块之间通过文件交换数据：

1. `observation/`：根据目标、发射站、接收站和接收时间轴，解算三事件光行时几何，输出 `observation_info.npz`。
2. `echo/`：读取观测几何和目标形状模型，计算旋转小行星的复基带 I/Q 回波，输出 `echo/echo.npz`。
3. `inversion/`：读取仿真回波，计算动态频谱和特征序列，用 Lomb-Scargle 周期搜索估计自转周期，输出 `inversion/summary.json`、`best_summary.json` 和图像。

GUI 不改变流水线物理模型。它负责编辑配置、逐阶段启动脚本、显示进度、记录当前会话日志和预览结果。运行前 GUI 会在 `runs/<实验名>/configs/` 下生成本次实际使用的配置快照，便于复查。

## 2. 启动方式

推荐在 Conda 的 `pytorch` 环境中启动：

```powershell
conda activate pytorch
python pyside_gui.py
```

回波仿真完成后，“查看回波”按钮会启用；点击后可在系统浏览器中打开 Plotly 交互图。

## 3. 界面区域说明

窗口顶部是配置文件、实验设置、运行按钮和进度条：

- `配置文件`：要载入的顶层流水线 JSON。默认是 `configs/campaign_v4_example.json`。
- `打开` / `载入` / `保存` / `另存为` / `校验`：读写并检查配置。
- `发射波形`：位于实验设置行，决定 CW 或 chirp 处理分支。
- `实验名`：输出目录名。结果写到 `runs/<实验名>/`。
- `输出目录`：运行结果根目录。相对路径会按项目根目录解析。
- `Python`：用于执行各子模块脚本的 Python 解释器。
- `运行当前阶段` / `运行完整 pipeline` / `中止` / `查看回波`：位于顶部操作行，进度条与它们并排。

左侧是流水线阶段控制：三个阶段按钮及各自状态。点击阶段只切换中间参数页。

中间是阶段参数编辑区。点击左侧阶段按钮可以切换当前编辑的模块参数。每次执行阶段前，GUI 会把当前页面字段同步回配置。观测阶段顶部显示“单基站观测”勾选框，回波阶段顶部显示“散射模型”选择框。

观测页卡片按目标、测站、接收或发射时序、计划与星历分组。连续波显示接收设置；Chirp 显示发射时序、雷达体制、接收采样和观测计划。勾选「单基站观测」后隐藏接收站。星历卡片仅在目标为 `horizons_vectors` 时出现。日志在参数区下方，回波预览走外部浏览器。

卡片标题使用浅蓝标题带与深蓝加粗字；“形状模型、散射指数、信噪比”等同级字段使用一致的字体。自转轴、初始坐标、速度、散射指数和斑块方向统一使用纵向关系线表示子模块：模块标题位于左侧，浅色竖线将标题与右侧下属条目分开，条目名称位于输入框上方并纵向排列。
卡片内顶层字段保持一致的竖向间距。数值与单位共用等高边框，可选单位以右侧箭头区分，固定单位沿用相同配色。单位选择仍表示当前输入数值的单位，保存时换算为标准单位。
数值编辑器会立即标红非数值、无穷值或非整数计数；此类草稿不能保存、切换阶段或运行。坐标分量允许输入 `299,792,458` 形式的千分位分隔符。

滚动条采用深色滑块与浅色轨道。所有布尔参数统一使用勾选框：选中时为蓝底白勾，未选中时为白底深边框，不再使用“是/否”下拉框。下拉列表按控件位置展开，不再以当前选项作为弹出位置锚点；只有屏幕底部空间不足时才向上展开。Windows 下优先使用原生样式及其展开动画，系统不支持该效果时直接显示列表。

回波页左栏为计算设置与雷达参数，右栏为目标参数与散射特性。点目标模式下隐藏形状、自转和散射热点字段。
「雷达参数」包含载频、Chirp 带宽/基带约定和幅度。「噪声」是独立卡片：勾选「添加噪声」后显示信噪比与噪声种子，交互对齐「散射特性」。反演页分为「时频分析」和「周期搜索」。
这些都是显示分组，另存 JSON 时仍使用原有字段路径。

日志位于参数区下方；进度条和回波预览入口位于顶部运行栏：

- `执行日志`：显示命令、配置快照路径、进度摘要、错误信息和最终反演结果。
- `查看回波`：回波阶段成功后启用，在系统浏览器中打开 Plotly HTML。
- 顶部进度条：显示当前子模块的粗略百分比和正在执行的子步骤。

## 4. 推荐使用流程

第一次运行建议先用示例配置跑通：

1. 启动 `python pyside_gui.py`。
2. 保持默认配置和实验名，选择左侧 `观测解算`，点击 `运行当前阶段`。
3. 等待 `观测解算` 完成，查看日志和生成的观测信息。
4. 选择左侧 `回波仿真` 并点击 `运行当前阶段`；完成后可用 `查看回波` 打开预览，查看实部 I、虚部 Q、幅度和相位。
5. 选择左侧 `周期反演` 并点击 `运行当前阶段`，查看日志中的结果；也可直接点击 `运行完整 pipeline` 顺序执行三个阶段。
6. 在 `runs/<实验名>/configs/` 中检查 `*.generated.json`，确认本次实际参数。

正式实验建议复制示例配置后再修改：

```powershell
Copy-Item configs\campaign_v4_example.json configs\my_experiment.json
python pyside_gui.py
```

在 GUI 中载入 `configs\my_experiment.json`，修改参数后使用 `另存为` 保存版本。不要直接改 `runs/<实验名>/configs/*.generated.json`，这些是每次运行生成的快照。

## 5. 顶层配置结构

顶层 JSON 只有三个业务段：

```json
{
  "observation": {},
  "echo": {},
  "inversion": {}
}
```

`observation_info.npz`、`echo.npz`、`summary.json` 等中间路径不需要手动填写。GUI 和 `pipeline.py` 会自动生成并注入下游模块。

## 6. 观测解算参数

`observation` 决定接收时间轴、目标状态、发射站/接收站状态和三事件光行时求解设置。

### 6.1 `target`

`target` 表示小行星质心状态。

| 字段 | 含义 | 注意事项 |
| --- | --- | --- |
| `id` | 目标编号或自定义标识 | `horizons_vectors` 模式下是 Horizons 查询目标编号。 |
| `name` | 显示和元数据名称 | 可读即可。 |
| `state` | 状态模型 | 目标建议使用 `linear`、`static` 或 `horizons_vectors`。 |
| `position_m` | 静态位置，单位 m | `state=static` 时使用。 |
| `position0_m` | 初始位置，单位 m | `state=linear` 时使用。 |
| `velocity_m_s` | 匀速速度，单位 m/s | `state=linear` 时使用。 |
| `object_type` | Horizons 目标类型 | 可为 `null` 或 `smallbody`。 |

常用选择：

- `static`：目标固定不动，适合最小测试。
- `linear`：目标匀速直线运动，适合离线仿真和快速验证。
- `horizons_vectors`：从 JPL Horizons 查询目标相对参考位置的星历表，再本地插值，适合真实天体实验。

### 6.2 `transmitter` 和 `receiver`

发射站和接收站支持：

| `state` | 含义 | 需要字段 |
| --- | --- | --- |
| `static` | 用户直接给 Cartesian 坐标 | `position_m` |
| `linear` | 匀速 Cartesian 状态 | `position0_m`、`velocity_m_s` |
| `geodetic_fixed` | 固定经纬高转 ECEF 近似 | `lat_deg`、`lon_deg`、`height_m` |
| `astropy_geodetic` | Astropy 按时间计算 GCRS 测站位置 | `lat_deg`、`lon_deg`、`height_m` |

GUI 不直接展示这四个技术状态，而是先选择“坐标格式”：

- 直角坐标：显示“初始坐标”子模块和“进行匀速直线运动”勾选框。未勾选时保存为
  `static`；勾选后再显示“速度”子模块，并保存为 `linear`。
- 大地坐标：显示包含经度、纬度、高度的“初始坐标”子模块，以及与其并列的
  “随地球自转更新位置”勾选框。勾选时保存为 `astropy_geodetic`，未勾选时保存为
  `geodetic_fixed`。

这里只接受 canonical v4 JSON；旧技术字段或未知字段会显示完整路径并拒绝加载。这里随时间变化的是测站在地心惯性系中的位置，而不是经纬度和高度本身。

真实地面测站优先使用 `astropy_geodetic`。Horizons 的地心参考中心、Earth 参考平面和网络重试策略由 observation 实现内部固定，不是 GUI 配置字段。

`linear` 发射站/接收站用于离线仿真、平台运动或算法验证。它并不表示真实地面站的高精度运动模型；真实固定地面站仍建议使用 `astropy_geodetic`。

观测参数页顶部提供“单基站观测：接收站沿用发射站参数”选项，启动和载入配置后
默认为关闭。勾选后接收站分组会隐藏，保存或执行前 GUI 会把发射站配置深拷贝为
接收站配置。取消勾选后接收站分组重新出现，可以单独配置双/多站几何。切换选项时
会把焦点留在勾选框上，不会再全选顶部配置文件路径。

### 6.3 `receive`

| 字段 | 含义 | 注意事项 |
| --- | --- | --- |
| `start_utc` | 接收起始 UTC | 使用 ISO 格式，例如 `2026-01-01T00:00:00.000`。 |
| `duration_s` | 接收时长，保存单位 s | GUI 可用 h、min 或 s 输入；样本数约为 `duration_s * sample_rate_hz`。 |
| `sample_rate_hz` | 接收采样率，单位 Hz | 影响观测几何样本数、回波样本数和反演频谱。 |

采样点为 `np.arange(N) / sample_rate_hz`，最后一个样本通常是 `(N-1)/sample_rate_hz`，不严格等于 `duration_s`。

连续波使用 `receive`；chirp 脉冲序列使用 `schedule` + `radar_system` + `receiver_sampling`。二者不能同时出现。GUI 切换波形时会改写当前会话的事件源，载入已包含历史字段的 JSON 会直接报错。

Chirp 下，`target.extent_path_m`（界面标签「体尺度路径展宽」）显示在「接收采样」卡片中，与 `pre_guard_s` / `post_guard_s` 一起决定快时间 ADC 窗前后余量；连续波不显示该控件（连续 `receive` 无脉冲窗）。JSON 键仍写在 `observation.target` 下。

### 6.4 观测产物

观测解算把接收时间轴、发射/散射时刻、收发视线和距离保存到
`runs/<实验名>/observation_info.npz`。该文件由 pipeline / GUI 自动注入 echo 配置，不需要在顶层 JSON 里手写路径。

### 6.5 `ephemeris`

仅当使用 `horizons_vectors` 或 `astropy_geodetic` 等真实星历/测站模式时才重要。

| 字段 | 含义 | 建议 |
| --- | --- | --- |
| `query_step_s` | Horizons 状态表间隔 | 越小插值误差越小，查询越多。短时窗口可从 60-300 s 开始。 |

参考中心、参考平面、星历 padding、HTTP 分块/重试/缓存以及光行时求解器迭代策略均由算法内部管理，不再显示或保存为实验字段。

## 7. 回波仿真参数

`echo` 根据观测几何、形状模型、散射设置和雷达波形生成复基带 I/Q。

GUI 中回波仿真参数按以下分区显示。

### 7.1 计算设置

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 计算设备 | `device` | 回波面元求和使用的设备 | `auto` 优先使用可用 CUDA；也可指定 `cuda:0` 或 `cpu`。 |
| 浮点精度 | `dtype` | 张量计算精度 | `float32` 更快，`float64` 更稳但更慢。 |
| 分块大小 | `chunk_size` | 可选计算分块样本数 | 配置中存在时显示；JSON 中仍为 `echo.chunk_size`。显存不足时可调小。 |

### 7.2 雷达参数

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 载频 | `carrier_frequency_hz` | 雷达载波频率 | GUI 可用 GHz、MHz 或 Hz 输入；保存为 Hz。 |
| 幅度 | `amplitude` | CW 波形幅度 | 连续波模式下为常数幅度。 |
| 带宽 | `bandwidth_hz` | 线性调频带宽 | Chirp 模式使用。 |

### 7.3 噪声

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 添加噪声 | （界面开关） | 是否向回波添加复高斯噪声 | 仅 GUI 展示；关闭后写入 `snr_db: null`，并隐藏信噪比与噪声种子。 |
| 信噪比 | `snr_db` | 复高斯噪声 SNR，单位 dB | 勾选「添加噪声」后显示；`0` 是 0 dB，不是关噪声。 |
| 噪声种子 | `seed` | 噪声随机数种子 | 勾选「添加噪声」后显示；固定后噪声可重复。 |

### 7.4 目标参数

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 形状模型 | `model_path` | OBJ 形状模型路径 | 相对路径按 `echo/` 模块目录解析。 |
| 自转周期 | `rotation_period_s` | 仿真真值自转周期 | GUI 可用 h 或 s 输入；保存到 JSON 时统一换算为 s。真实反演时它不是已知量；这里是仿真标签。 |
| 初始相位 | `initial_phase_deg` | 观测起点目标初相位 | GUI 可用 ° 或 π rad 输入；保存为 °。例如 `1 π rad = 180°`。 |
| 自转轴坐标系 | `spin_pole_frame` | 自转轴角度使用的坐标系 | GUI 显示“赤道坐标系”和“黄道坐标系”；保存值为 `equatorial` 或 `ecliptic`。未知值会报错，不会把 `icrs` 静默改写为赤道坐标系。 |
| 自转轴赤经/赤纬 | `spin_pole_icrs_deg` | 赤道坐标下的赤经、赤纬，单位 ° | 选择赤道坐标系时显示，GUI 拆成两个输入框。 |
| 自转轴黄经/黄纬 | `spin_pole_ecliptic_deg` | 黄道坐标下的黄经、黄纬，单位 ° | 选择黄道坐标系时显示，程序会转换到赤道方向后计算。 |

### 7.5 散射特性

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 散射指数 | `scattering_power` | 发射照明和接收方向的余弦幂指数 | 拆成“发射照明”和“接收散射”；未来散射定律参数也放在本块。 |
| 启用散射热点 | `enabled` | 是否启用人工强散射斑块 | 取消勾选时收起斑块方向、半径和强度。 |
| 斑块方向 | `direction_body` | 强散射斑中心在小行星本体系中的方向 | GUI 使用本体系经度/纬度输入，单位 °；保存时转换为内部使用的单位方向向量。 |
| 斑块半径 | `radius_deg` | 强散射斑角半径，单位 ° | 越大，增强区域越宽。 |
| 斑块强度 | `strength` | 强散射斑相对增强系数 | 用于打破几何对称性和测试周期可辨识性，不是完整粗糙度模型。 |

当前回波仿真使用面元中心近似、远场路径展开和相干求和。它适合周期反演算法验证，但还不是完整雷达成像物理模型。

## 8. 周期反演参数

`inversion` 读取 `echo.npz`，对复基带 I/Q 做频谱分析和周期搜索。

| 字段 | 含义 | 建议 |
| --- | --- | --- |
| `stft_window_samples` | STFT 窗长 | 决定时间/频率分辨率；必须小于或等于样本数。 |
| `stft_overlap_fraction` | STFT 重叠比例 | 常用 0.5-0.75。 |
| `period_min_s` | 搜索最小周期 | 应覆盖预期周期下界。 |
| `period_max_s` | 搜索最大周期 | 应覆盖预期周期上界；不要盲目设太宽。 |
| `period_grid_size` | 周期网格密度 | 越大越慢，峰值定位越细。 |

当前反演流程是：可选平动多普勒补偿、STFT、提取总功率/频谱质心/RMS 带宽三类特征、对特征序列做 Lomb-Scargle 周期搜索。只有当配置或 echo 元数据中包含 `translation_coefficients_hz` 时，才会执行多项式平动多普勒补偿。示例仿真回波是已生成好的复基带 I/Q，可直接用于当前反演模块。

## 9. 输出文件说明

典型输出结构：

```text
runs/<实验名>/
├── observation_info.npz
├── echo/
│   ├── echo.npz
│   └── summary.json
├── inversion/
│   ├── summary.json
│   ├── best_summary.json
│   ├── dynamic_spectrum.png
│   ├── periodogram.png
│   └── periodogram.html
├── logs/
│   ├── observation.log
│   ├── echo.log
│   └── inversion.log
└── configs/
    ├── experiment.json
    ├── observation.generated.json
    ├── echo.generated.json
    └── inversion.generated.json
```

`summary.json` 保存完整候选列表，`best_summary.json` 保存日志中展示的推荐结果。GUI 预览图缓存在 `.gui_state/previews/`，不是科学结果的唯一来源。

## 10. 蒙特卡洛仿真方案

当前 GUI 适合单次实验的交互配置、执行和检查。蒙特卡洛仿真更适合使用命令行批处理：先准备一组 pipeline JSON 文件，每个文件对应一个样本工况，例如不同 SNR、自转周期、初始相位、散射斑位置、形状模型或观测几何。

推荐工作流如下：

1. 用 GUI 调通一个基准配置，并另存为 `configs/mc/base.json`。
2. 用脚本批量生成 `configs/mc/case_0001.json`、`case_0002.json` 等配置文件。每个配置文件只修改需要随机化的参数，并记录随机种子。
3. 对每个 JSON 调用流水线命令：

```powershell
conda activate pytorch
python pipeline.py --config configs\mc\case_0001.json --run-name mc_case_0001
```

4. 每个样本的输出会进入独立目录，例如 `runs/mc_case_0001/`。后续统计脚本读取各目录下的 `inversion/best_summary.json`、`inversion/summary.json` 和 `echo/summary.json`。
5. 统计阶段建议汇总：真值周期、反演周期、相对误差、是否落入容差、SNR、观测时长、波形类型、是否启用强散射点、随机种子。

如果样本很多，可以把第 3 步改成批处理脚本或任务队列。建议先串行跑 3-5 个样本确认输出字段稳定，再并行运行大批量实验。并行时要保证每个 case 的 `run-name` 唯一，避免多个进程写入同一目录。

GUI 和蒙特卡洛并不冲突：GUI 用来设计、检查和解释单个 case，命令行批处理用来做规模化统计。后续如果要实现正式蒙特卡洛模块，比较合适的形态是新增 `monte_carlo.py`：读取一个样本清单或生成规则，批量调用现有 pipeline，最后输出 CSV/Excel 汇总和误差分布图。

## 11. 参数配置注意事项

1. 先用短时长、低采样率和较小周期网格跑通，再逐步增加规模。
2. 不要让 `stft_window_samples` 大于回波样本数。
3. 真实目标使用 `horizons_vectors` 时，先检查 `ephemeris.query_step_s` 的敏感性。
4. 真实地面站优先使用 `astropy_geodetic`，并保持参考平面一致。
5. 载频越高，相同几何误差对应的相位误差越敏感，应相应检查星历、测站和光行时精度。
6. 示例中的 `scattering_spot` 会让周期特征更清晰；真实散射模型可能不会这么理想。
7. `snr_db` 越高，周期图越干净。评估鲁棒性时应降低 SNR 或加入更真实的系统误差。
8. 如果运行时间过长，优先降低 `duration_s`、`sample_rate_hz`、`period_grid_size` 或调小回波 `chunk_size`。
9. 如果要复现实验，保存顶层 JSON，并保留 `runs/<实验名>/configs/experiment.json`。

## 12. 关于光行时加速与精度

早期实现按接收采样点逐个求解三事件光行时。每个采样点都要在 Python 层调用多次 `retarded_time()`、状态查询、范数计算和单位向量计算。样本数一大，主要耗时来自 Python 循环和重复函数调用，而不是光行时固定点迭代本身。

当前实现把整条接收时间轴作为数组批量处理：

1. 一次性批量求接收时刻对应的散射时刻。
2. 一次性批量求散射时刻对应的发射时刻。
3. 一次性批量计算目标、发射站、接收站位置。
4. 一次性批量计算距离和视线单位向量。

这仍然是同一个固定点方程、同一个 `tolerance_s`、同一个 `max_iter`，只是把逐点 Python 循环换成 NumPy 向量化数组运算。对 `static`、`linear`、`horizons_vectors` 插值状态和 `astropy_geodetic` 批量状态，数学结果应与逐点算法一致。开发验证中，线性/静态小样本与旧逐点算法逐项对比最大差异为 0。

为什么能快很多：以前每个样本都单独进入 Python 循环；现在每轮迭代用底层 C/NumPy 对整批样本计算，函数调用次数从“样本数 × 迭代次数”量级降为“迭代次数”量级。半小时到一分钟以内的提升在这种瓶颈结构下是合理的。

需要注意的边界：

- 向量化不是降低精度，也不是减少迭代阈值。
- 如果状态模型内部本身是低精度插值，最终精度仍受 `query_step_s` 和星历源限制。
- 如果真实实验要求更严，应对 `tolerance_s`、`query_step_s`、`sample_rate_hz` 做敏感性检查。
- 当前解的是小行星质心三事件几何；每个面元的精细路径在回波模块中近似处理，不等同于逐面元精确光行时解。

## 13. 常见问题

### 13.1 交互图在哪里打开

当前 GUI 固定通过系统浏览器打开 Plotly 交互图。若浏览器未自动弹出，可在 `.gui_state/previews/` 中打开对应的回波预览 HTML 文件。

### 13.2 点击中止后为什么输出目录还存在

中止只停止计算进程，不删除已生成的配置快照、日志或部分输出。这样可以保留错误现场，便于检查参数和日志。

### 13.3 为什么示例周期图只有真值附近一个明显峰

示例配置是干净、短链路、已知真值的仿真实验，且强散射斑会增强周期可辨识性；这不代表真实数据一定同样理想。真实雷达数据通常还需要下变频、匹配滤波或距离门、标定、平动补偿、异常点处理和误差建模。

### 13.4 能直接拿真实回波进反演吗

不能把未经处理的真实原始雷达数据直接等同于当前 `echo.npz`。当前反演输入假设已经是统一时间轴上的复基带 I/Q，并且具备必要元数据。真实数据需要先转换成与 `echo.npz` 兼容的数据格式，并完成相应预处理。

### 13.5 星历覆盖不足会怎样

如果内部星历安全余量仍不足以覆盖发射或散射时刻，程序会明确报出插值越界并停止，不会继续给出不可靠结果。此时应检查目标距离、观测窗口和时间原点；安全余量不再由 GUI 字段手工调节。
