docs/4.2/GUI_USER_MANUAL.md
# 自转周期测量 GUI 用户手册

[English README](../../README_EN.md) | [项目首页](../../README.md)

本文面向第一次使用本项目 GUI 的用户，说明项目原理、界面操作、参数含义、配置注意事项和常见问题。GUI 入口为 `pyside_gui.py`（或 `python -m rotation_gui`）。

## 1. 项目原理概览

本项目用于构造一条“小行星雷达回波仿真到自转周期反演”的端到端流水线。流水线由三个相互独立的子模块组成，模块之间通过文件交换数据：

1. `observation/`：根据目标、发射站、接收站和接收时间轴，解算三事件光行时几何，输出 `observation_info.npz`。
2. `echo/`：读取观测几何和目标形状模型，计算旋转小行星的复基带 I/Q 回波，输出 `echo/echo.npz`。
3. `inversion/`：读取仿真回波，计算动态频谱和特征序列，用 Lomb-Scargle 周期搜索估计自转周期，输出 `inversion/summary.json`、`best_summary.json` 和图像。

GUI 不改变流水线物理模型。它负责编辑配置、逐阶段启动脚本、显示进度、记录当前会话日志和预览结果。运行前 GUI 会在 `runs/<实验名>/configs/` 下生成本次实际使用的配置快照，便于复查。

## 2. 启动方式

推荐在 Conda 的 `pytorch` 环境中启动：

```powershell
conda activate pytorch
python pyside_gui.py
```

回波仿真完成后，“查看回波”按钮会启用；点击后可在系统浏览器中打开 Plotly 交互图。

## 3. 界面区域说明

窗口顶部是配置文件、实验设置、运行按钮和进度条：

- `配置文件`：用不可编辑的灰色文字区显示当前 JSON 路径；路径太长时中间省略，悬停可查看完整路径。无有效会话时默认是 `configs/chirp_point_target_test.json`（开发夹具；正式示例待重新设计）。
- `打开`：选择一个已有 JSON 并载入，实验名初始设为该文件名。
- `保存`：更新当前显示的 JSON 文件。实验名变化不改变保存路径。
- `另存为`：用对话框选择一个新 JSON 路径并保存，随后切换当前配置路径；实验名保持不变。若目标是另一个已有文件，会报错，避免覆盖。
- `校验`：按当前阶段检查配置。
- `发射波形`：位于实验设置行，决定 CW 或 chirp 处理分支。
- `实验名`：`runs/<实验名>/` 的目录名，与配置文件路径独立。不能包含路径分隔符或 Windows 保留字符。
- `输出目录`：运行结果根目录。相对路径会按项目根目录解析。
- `Python`：用于执行各子模块脚本的 Python 解释器。
- `运行当前阶段` / `运行完整 pipeline` / `中止` / `查看回波`：位于顶部操作行，进度条与它们并排。

左侧是流水线阶段控制：三个阶段按钮及各自状态。点击阶段只切换中间参数页。

中间是阶段参数编辑区。点击左侧阶段按钮可以切换当前编辑的模块参数。每次执行阶段前，GUI 会把当前页面字段同步回配置。观测阶段顶部显示“单基站观测”勾选框，回波阶段顶部显示“散射模型”选择框。

观测页卡片按目标、测站、接收或发射时序、计划与星历分组。顶部「发射波形」只写入 `echo.waveform.type`，并切换观测事件源：连续波显示接收设置；Chirp 显示发射时序（`observation.transmit` 的 PRF 与脉宽）、雷达体制、接收采样和观测计划。勾选「单基站观测」后隐藏接收站。星历卡片仅在目标为 `horizons_vectors` 时出现。日志在参数区下方，回波预览走外部浏览器。

卡片标题使用浅蓝标题带与深蓝加粗字；“形状模型、散射指数、信噪比”等同级字段使用一致的字体。自转轴、初始坐标、速度、散射指数和斑块方向统一使用纵向关系线表示子模块：模块标题位于左侧，浅色竖线将标题与右侧下属条目分开，条目名称位于输入框上方并纵向排列。
卡片内顶层字段保持一致的竖向间距。数值与单位共用等高边框，可选单位以右侧箭头区分，固定单位沿用相同配色。单位选择仍表示当前输入数值的单位，保存时换算为标准单位。
数值编辑器会立即标红非数值、无穷值或非整数计数；此类草稿不能保存、切换阶段或运行。坐标分量允许输入 `299,792,458` 形式的千分位分隔符。

滚动条采用深色滑块与浅色轨道。所有布尔参数统一使用勾选框：选中时为蓝底白勾，未选中时为白底深边框，不再使用“是/否”下拉框。下拉列表按控件位置展开，不再以当前选项作为弹出位置锚点；只有屏幕底部空间不足时才向上展开。Windows 下优先使用原生样式及其展开动画，系统不支持该效果时直接显示列表。

回波页左栏为计算设置与雷达参数，右栏为目标参数与散射特性。点目标模式下隐藏形状、自转和散射热点字段。
「雷达参数」包含载频、Chirp 带宽/基带约定和幅度。「噪声」是独立卡片：勾选「添加噪声」后显示信噪比与噪声种子，交互对齐「散射特性」。反演页分为「时频分析」和「周期搜索」。
Chirp 基带约定的新建默认值为“对称带宽”（`centered`）；加载已有配置时保留其中显式指定的约定。
这些都是显示分组，另存 JSON 时仍使用原有字段路径。

观测计划的“选时方式”提供“手动选择”和“自动选取”。自动选取时显示 Run 数量、单次 Run 时长、“包含非可见时段”和“随机选取”；勾选随机选取后才显示随机种子。保存时只写出当前选时方式的活动字段：手动只留 `runs`，等间隔留 `run_count`/`run_duration_s` 且不含种子，随机才写 `random_seed`。互斥草稿可以留在界面内存中，不会进入规范 JSON。非可见时段选项写入 `visibility.allow_unobservable_for_simulation`。

自动选取下方的观测计划预览先检查单次 Run 能否在首个有效回波返回前完成脉冲发射、收发切换和安全余量，再给出**近似可排列**的 Run 数量上限；该上限来自近似传播时延，不表示正式计划已通过光行时解算。单站跨 Run 收发冲突会在预览中按与正式解算相同的区间判据标为不可行。单次 Run 自身不可行时数量上限直接显示为 0，并给出建议的 `run_duration_s` 上界。预览包含“可见性”“Run”和“ADC 估计”三条轨道。大地坐标测站用绿色和红色分别表示满足与不满足高度角约束的时段；自定义直角坐标测站不定义本地地平，可见性轨道按整段候选时间着色，详情写“自定义直角坐标：不应用地平可见性约束”，不会改用灰色斜纹。灰色斜纹只表示“当前坐标本应计算几何可见性，但本次计算失败”。深蓝色表示发射 Run，浅蓝色表示包含传播、切换、安全余量和接收余量的调度预留尾部，紫色表示按当前传播时延估算的 Run 级连续 ADC 窗。极短区间在屏幕上不足一个像素时会保留最小显示宽度，因此轨道用于判断分布与相对关系，精确数值仍以摘要和正式解算结果为准。影响预览的字段变化后，预览块显示“参数已更新，请刷新预览”，只有点击「刷新预览」才重新计算；星历查询同样只在此时发起。测站改用直角坐标后，高度角、可见性采样步长和“包含非可见时段”会从当前配置中移除，不再作为隐藏字段继续影响选时。
发射 Run 的选取原则、单站预留长度、路径变化率时标伸缩和 ADC 窗生成公式见[观测时刻选取与接收窗口生成规范](OBSERVATION_TIME_SELECTION.md)。
切换“随机选取”时，随机种子在勾选项下方增减，当前滚动位置和已达到的滚动范围保持不变，收起后留下的空白可通过向上滚动移出视口。

日志位于参数区下方；进度条和回波预览入口位于顶部运行栏：

- `执行日志`：显示启动命令、配置快照路径、上游产物复用情况、中文警告、错误信息与阶段结果摘要。协议控制行（`__PROGRESS__`、`__WARNING__`、`__ERROR__`、`__SUMMARY__`）一律先解析成可读文本，不会原样出现在日志里；渲染层对文本只做一次 HTML 转义，日志中不会出现 `&quot;` 之类的实体，空行也不会混入不换行空格。每个阶段成功后会列出该阶段产物路径（如 `回波数据：…\echo\echo.npz`）。成功、警告和错误分别用绿、琥珀和红色标示；日志最多保留最近 5000 行，超出部分从最早的记录开始丢弃。标题右侧提供“复制”和“清空”，清空只影响当前窗口显示，不删除已生成的实验文件。
- `查看回波`：回波阶段成功后启用，在系统浏览器中打开 Plotly HTML。连续波预览显示实部、虚部、幅度和解缠相位；chirp 预览显示三幅图，从上到下依次为脉冲保存行的原始 `|iq|` 二维图、脉冲压缩后的二维距离像 `|MF|`、沿脉冲平均的一维距离像。原始图和压缩图抽取同一批脉冲和同一批快时间样点，共用脉冲保存行内时间轴，可以逐列比较；橙色虚线是由 `row_fast_time_offset_s` 得到的预计质心回波位置，同时在压缩图和一维距离像上画出。
- 顶部进度条：显示当前子模块的粗略百分比和正在执行的子步骤。

## 4. 推荐使用流程

第一次运行建议先用示例配置跑通：

1. 启动 `python pyside_gui.py`。
2. 保持默认配置和实验名，选择左侧 `观测解算`，点击 `运行当前阶段`。
3. 等待 `观测解算` 完成，查看日志和生成的观测信息。
4. 选择左侧 `回波仿真` 并点击 `运行当前阶段`；完成后可用 `查看回波` 打开预览，chirp 波形查看二维原始幅度、脉冲压缩后的二维距离像和一维距离像，连续波查看实部 I、虚部 Q、幅度和相位。
5. 选择左侧 `周期反演` 并点击 `运行当前阶段`，查看日志中的结果摘要；也可直接点击 `运行完整 pipeline` 顺序执行三个阶段（完整 pipeline 会依次重跑观测、回波与反演）。
6. 只想在已有回波上重跑反演时，不必重跑前两个阶段：把 `实验名` 与 `输出目录` 指回上次的 run，选择 `周期反演` 后点 `运行当前阶段`。日志会给出 `复用已有回波数据：…\echo\echo.npz`；若该文件不存在，GUI 会在启动子进程前提示应把实验名指向包含 `echo.npz` 的目录。能否自动复用只看该 run 的 `stage_manifest.json` 是否记下与当前配置一致的阶段指纹；`*.generated.json` 只是子进程输入，不是复用证据。当前回波有效配置与生成该产物时的配置不一致时，GUI 会阻断并要求重跑上游阶段；只改反演搜索范围不会挡住复用。缺少阶段指纹的历史产物需要确认后才能复用。
7. 在 `runs/<实验名>/configs/` 中检查 `*.generated.json`，确认本次实际参数。

正式实验可以先在 GUI 中打开示例配置，再改参数。要建立自己的配置文件，点「另存为」选择文件名和目录；之后点「保存」更新该文件。修改「实验名」只会改变运行结果的目录，不会创建或改名 JSON。配置路径与实验名可以不同。

```powershell
python pyside_gui.py
```

载入配置时，GUI 会把配置字段更新为该文件中的设置，并将实验名设为文件名（不含 `.json`）。不要直接改 `runs/<实验名>/configs/*.generated.json`，这些是每次运行生成的快照。
退出 GUI 时，当前有效的参数、配置路径、实验名和输出目录保存在 `.gui_state/pipeline_gui_state.json`，下次打开时恢复这次会话；无效状态会被忽略并回退到默认示例配置。会话状态不会自动覆盖原 JSON，只有点击“保存”才写入配置文件。

## 5. 顶层配置结构

顶层 JSON 只有三个业务段：

```json
{
  "observation": {},
  "echo": {},
  "inversion": {}
}
```

`observation_info.npz`、`echo.npz`、`summary.json` 等中间路径不需要手动填写。GUI 和 `pipeline.py` 会自动生成并注入下游模块。

## 6. 观测解算参数

`observation` 决定接收时间轴、目标状态、发射站/接收站状态和三事件光行时求解设置。

### 6.1 `target`

`target` 表示小行星质心状态。GUI 先选择“位置来源”：手动坐标或 Horizons 星历；手动坐标下再勾选是否进行匀速直线运动，与发射站、接收站的运动设置保持一致。目标不提供大地坐标选项。

| 字段 | 含义 | 注意事项 |
| --- | --- | --- |
| `id` | 目标编号或自定义标识 | `horizons_vectors` 模式下是 Horizons 查询目标编号。 |
| `name` | 显示和元数据名称 | 可读即可。 |
| `state` | 保存到配置的状态模型 | 手动坐标且未勾选运动时为 `static`，勾选后为 `linear`；选择 Horizons 星历时为 `horizons_vectors`。 |
| `position_m` | 静态位置，单位 m | `state=static` 时使用。 |
| `position0_m` | 初始位置，单位 m | `state=linear` 时使用。 |
| `velocity_m_s` | 匀速速度，单位 m/s | `state=linear` 时使用。 |
| `object_type` | Horizons 目标类型 | 新配置默认为 `smallbody`；旧配置中显式写入的 `null` 仍可读取。当前实验只使用小天体，因此 GUI 不显示此字段。 |

常用选择：

- `static`：目标固定不动，适合最小测试。
- `linear`：目标匀速直线运动，适合离线仿真和快速验证。
- `horizons_vectors`：从 JPL Horizons 查询目标相对参考位置的星历表，再本地插值，适合真实天体实验。

### 6.2 `transmitter` 和 `receiver`

发射站和接收站支持：

| `state` | 含义 | 需要字段 |
| --- | --- | --- |
| `static` | 用户直接给 Cartesian 坐标 | `position_m` |
| `linear` | 匀速 Cartesian 状态 | `position0_m`、`velocity_m_s` |
| `geodetic_fixed` | 固定经纬高转 ECEF 近似 | `lat_deg`、`lon_deg`、`height_m` |
| `astropy_geodetic` | Astropy 按时间计算 GCRS 测站位置 | `lat_deg`、`lon_deg`、`height_m` |

GUI 不直接展示这四个技术状态，而是先选择“坐标格式”：

- 直角坐标：显示“初始坐标”子模块和“进行匀速直线运动”勾选框。未勾选时保存为
  `static`；勾选后再显示“速度”子模块，并保存为 `linear`。
- 大地坐标：显示包含经度、纬度、高度的“初始坐标”子模块，以及与其并列的
  “随地球自转更新位置”勾选框。勾选时保存为 `astropy_geodetic`，未勾选时保存为
  `geodetic_fixed`。

这里只接受 canonical v4 JSON；旧技术字段或未知字段会显示完整路径并拒绝加载。这里随时间变化的是测站在地心惯性系中的位置，而不是经纬度和高度本身。

真实地面测站优先使用 `astropy_geodetic`。Horizons 的地心参考中心、Earth 参考平面和网络重试策略由 observation 实现内部固定，不是 GUI 配置字段。

`linear` 发射站/接收站用于离线仿真、平台运动或算法验证。它并不表示真实地面站的高精度运动模型；真实固定地面站仍建议使用 `astropy_geodetic`。

观测参数页顶部提供“单基站观测：接收站沿用发射站参数”选项，启动和载入配置后
默认为关闭。勾选后接收站分组会隐藏，保存或执行前 GUI 会把发射站配置深拷贝为
接收站配置。取消勾选后接收站分组重新出现，可以单独配置双/多站几何。切换选项时
会把焦点留在勾选框上，不会再全选顶部配置文件路径。

### 6.3 `receive`

| 字段 | 含义 | 注意事项 |
| --- | --- | --- |
| `start_utc` | 接收起始 UTC | 使用 ISO 格式，例如 `2026-01-01T00:00:00.000`。 |
| `duration_s` | 接收时长，保存单位 s | GUI 可用 h、min 或 s 输入；样本数约为 `duration_s * sample_rate_hz`。 |
| `sample_rate_hz` | 接收采样率，单位 Hz | 影响观测几何样本数、回波样本数和反演频谱。 |

采样点为 `np.arange(N) / sample_rate_hz`，最后一个样本通常是 `(N-1)/sample_rate_hz`，不严格等于 `duration_s`。

连续波使用 `receive`；chirp 脉冲序列使用 `schedule` + `radar_system` + `receiver_sampling`。二者不能同时出现。GUI 切换波形时会改写当前会话的事件源，载入已包含历史字段的 JSON 会直接报错。

Chirp 下，`target.extent_path_m`（界面标签「采集路径窗」）显示在「接收采样」卡片中。它是相对质心参考回波、两侧各允许的最大额外双程路径，单位可选 m 或 km。未知尺度和余量都写在这一个数里。同一卡片用只读文字给出静止时标的门时延、前沿取整后的样点数 $n_{\mathrm{pre}}$、整行样点数，以及由 Chirp 带宽算出的压缩后距离分辨 $c/(2B)$。$n_{\mathrm{pre}}$ 写在门时延后面的括号里，比门时延对应的物理样点数最多多 1。连续波不显示该控件。JSON 键仍写在 `observation.target` 下。发射时序里的脉冲宽度保存为秒，界面下拉项从上到下依次是 s、ms、µs；载频、带宽和快时间采样率已经可以选 SI 词头。高分辨试例里的 $40\,\mu\mathrm{s}$ 脉宽会显示成 40 µs，而不是 0.00004 s。

### 6.4 观测产物

观测解算把接收时间轴、发射/散射时刻、收发视线和距离保存到
`runs/<实验名>/observation_info.npz`。该文件由 pipeline / GUI 自动注入 echo 配置，不需要在顶层 JSON 里手写路径。

### 6.5 `ephemeris`

仅当使用 `horizons_vectors` 或 `astropy_geodetic` 等真实星历/测站模式时才重要。

| 字段 | 含义 | 建议 |
| --- | --- | --- |
| `query_step_s` | Horizons 状态表间隔 | 越小插值误差越小，查询越多。短时窗口可从 60-300 s 开始。 |

参考中心、参考平面、星历 padding、HTTP 分块/重试/缓存以及光行时求解器迭代策略均由算法内部管理，不再显示或保存为实验字段。

## 7. 回波仿真参数

`echo` 根据观测几何、形状模型、散射设置和雷达波形生成复基带 I/Q。

GUI 中回波仿真参数按以下分区显示。

### 7.1 计算设置

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 计算设备 | `device` | 回波面元求和使用的设备 | `auto` 优先使用可用 CUDA；也可指定 `cuda:0` 或 `cpu`。 |
| 浮点精度 | `dtype` | 张量计算精度 | `float32` 更快，`float64` 更稳但更慢。 |
| CW 时间分块 | `chunk_size` | 连续波网格每次计算的时间样点数 | 默认 2048。只影响速度和显存，不改物理模型。Chirp 不使用该字段。 |
| 面元计算块 | `facet_chunk_size` | 网格 Chirp 每次送入计算的面元数 | 省略时取“面元数或 1280 中较小者”。只影响速度和显存。 |
| 样点计算块 | `fast_sample_chunk_size` | 网格 Chirp 每次送入计算的脉冲–采样点对数 | 省略时按“一块约 200 万个面元—样点”解析。只影响速度和显存。 |
| 脉冲计算批次 | `pulse_batch_size` | 网格 Chirp 每次一起计算的脉冲数 | 默认 32。只影响脉冲分组，不改物理模型；网格路径在批量为 `1` 时仍走同一套样点对/面元缩块，以便 CUDA 显存不足时退避。点目标路径没有这套批内核。显存充足时过小的块会增加 GPU 调用开销。 |

### 7.2 雷达参数

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 载频 | `carrier_frequency_hz` | 雷达载波频率 | GUI 可用 GHz、MHz 或 Hz 输入；保存为 Hz。 |
| 幅度 | `amplitude` | CW 波形幅度 | 连续波模式下为常数幅度。 |
| 带宽 | `bandwidth_hz` | 线性调频带宽 | Chirp 模式使用。 |

快时间采样率位于观测解算的接收采样卡片，Chirp 带宽位于回波仿真的射频波形卡片。单独运行观测解算时不检查两者的大小关系；启动回波仿真或使用顶部“校验”按钮时，复基带 Chirp 要求 `receiver_sampling.fast_sample_rate_hz` 大于 `bandwidth_hz`。

### 7.3 噪声

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 添加噪声 | （界面开关） | 是否向回波添加复高斯噪声 | 仅 GUI 展示；关闭后写入 `snr_db: null`，并隐藏信噪比与噪声种子。 |
| 信噪比 | `snr_db` | 复高斯噪声 SNR，单位 dB | 勾选「添加噪声」后显示；`0` 是 0 dB，不是关噪声。 |
| 噪声种子 | `seed` | 噪声随机数种子 | 勾选「添加噪声」后显示；固定后噪声可重复。 |

### 7.4 目标参数

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 形状模型 | `model_path` | OBJ 形状模型路径 | 相对路径按 `echo/` 模块目录解析。 |
| 自转周期 | `rotation_period_s` | 仿真真值自转周期 | GUI 可用 h 或 s 输入；保存到 JSON 时统一换算为 s。真实反演时它不是已知量；这里是仿真标签。 |
| 初始相位 | `initial_phase_deg` | 观测起点目标初相位 | GUI 可用 ° 或 π 输入；下拉项中的 π 表示 π rad，保存为 °。例如 `1 π = 180°`。 |
| 自转轴坐标系 | `spin_pole_frame` | 自转轴角度使用的坐标系 | GUI 显示“赤道坐标系”和“黄道坐标系”；保存值为 `equatorial` 或 `ecliptic`。未知值会报错，不会把 `icrs` 静默改写为赤道坐标系。 |
| 自转轴赤经/赤纬 | `spin_pole_icrs_deg` | 赤道坐标下的赤经、赤纬，单位 ° | 选择赤道坐标系时显示，GUI 拆成两个输入框。 |
| 自转轴黄经/黄纬 | `spin_pole_ecliptic_deg` | 黄道坐标下的黄经、黄纬，单位 ° | 选择黄道坐标系时显示，程序会转换到赤道方向后计算。 |

### 7.5 散射特性

| 界面标签 | 配置字段 | 含义 | 注意事项 |
| --- | --- | --- | --- |
| 散射指数 | `scattering_power` | 发射照明和接收方向的余弦幂指数 | 拆成“发射照明”和“接收散射”；未来散射定律参数也放在本块。 |
| 启用散射热点 | `enabled` | 是否启用人工强散射斑块 | 取消勾选时收起斑块方向、半径和强度。 |
| 斑块方向 | `direction_body` | 强散射斑中心在小行星本体系中的方向 | GUI 使用本体系经度/纬度输入，单位 °；保存时转换为内部使用的单位方向向量。 |
| 斑块半径 | `radius_deg` | 强散射斑角半径，单位 ° | 越大，增强区域越宽。 |
| 斑块强度 | `strength` | 强散射斑相对增强系数 | 用于打破几何对称性和测试周期可辨识性，不是完整粗糙度模型。 |

当前回波仿真使用面元中心近似、远场路径展开和相干求和。它适合周期反演算法验证，但还不是完整雷达成像物理模型。

## 8. 周期反演参数

`inversion` 读取 `echo.npz`，对复基带 I/Q 做频谱分析和周期搜索。

| 字段 | 含义 | 建议 |
| --- | --- | --- |
| `stft_window_samples` | STFT 窗长 | 决定时间/频率分辨率；必须小于或等于样本数。 |
| `stft_overlap_fraction` | STFT 重叠比例 | 常用 0.5-0.75。 |
| `period_min_s` | 搜索最小周期 | 应覆盖预期周期下界。 |
| `period_max_s` | 搜索最大周期 | 应覆盖预期周期上界；不要盲目设太宽。 |
| `period_grid_size` | 周期网格密度 | 越大越慢，峰值定位越细。 |

当前反演流程是：可选平动多普勒补偿、STFT、提取总功率/频谱质心/RMS 带宽三类特征、对特征序列做 Lomb-Scargle 周期搜索。只有当配置或 echo 元数据中包含 `translation_coefficients_hz` 时，才会执行多项式平动多普勒补偿。示例仿真回波是已生成好的复基带 I/Q，可直接用于当前反演模块。

## 9. 输出文件说明

典型输出结构：

```text
runs/<实验名>/
├── manifest.json
├── stage_manifest.json
├── observation_info.npz
├── echo/
│   ├── echo.npz
│   └── summary.json
├── inversion/
│   ├── summary.json
│   ├── best_summary.json
│   ├── period_observables.npz
│   ├── window_function.npz
│   ├── dynamic_spectrum.png
│   ├── periodogram.png
│   └── periodogram.html
└── configs/
    ├── observation.generated.json
    ├── echo.generated.json
    └── inversion.generated.json
```

`inversion/summary.json` 保存每个特征的完整候选列表与搜索网格，`best_summary.json` 保存跨特征共识的推荐结果（日志中的结果摘要取自它）。`period_observables.npz` 保存用于周期搜索的特征序列、不确定度与质量标志，`window_function.npz` 保存采样窗函数诊断。GUI 预览图缓存在 `.gui_state/previews/`，不是科学结果的唯一来源。

## 10. 蒙特卡洛仿真方案

当前 GUI 适合单次实验的交互配置、执行和检查。蒙特卡洛仿真更适合使用命令行批处理：先准备一组 pipeline JSON 文件，每个文件对应一个样本工况，例如不同 SNR、自转周期、初始相位、散射斑位置、形状模型或观测几何。

推荐工作流如下：

1. 用 GUI 调通一个基准配置，并另存为 `configs/mc/base.json`。
2. 用脚本批量生成 `configs/mc/case_0001.json`、`case_0002.json` 等配置文件。每个配置文件只修改需要随机化的参数，并记录随机种子。
3. 对每个 JSON 调用流水线命令：

```powershell
conda activate pytorch
python pipeline.py --config configs\mc\case_0001.json --run-name mc_case_0001
```

4. 每个样本的输出会进入独立目录，例如 `runs/mc_case_0001/`。后续统计脚本读取各目录下的 `inversion/best_summary.json`、`inversion/summary.json` 和 `echo/summary.json`。
5. 统计阶段建议汇总：真值周期、反演周期、相对误差、是否落入容差、SNR、观测时长、波形类型、是否启用强散射点、随机种子。

如果样本很多，可以把第 3 步改成批处理脚本或任务队列。建议先串行跑 3-5 个样本确认输出字段稳定，再并行运行大批量实验。并行时要保证每个 case 的 `run-name` 唯一，避免多个进程写入同一目录。

GUI 和蒙特卡洛并不冲突：GUI 用来设计、检查和解释单个 case，命令行批处理用来做规模化统计。后续如果要实现正式蒙特卡洛模块，比较合适的形态是新增 `monte_carlo.py`：读取一个样本清单或生成规则，批量调用现有 pipeline，最后输出 CSV/Excel 汇总和误差分布图。

## 11. 参数配置注意事项

1. 先用短时长、低采样率和较小周期网格跑通，再逐步增加规模。
2. 不要让 `stft_window_samples` 大于回波样本数。
3. 真实目标使用 `horizons_vectors` 时，先检查 `ephemeris.query_step_s` 的敏感性。
4. 真实地面站优先使用 `astropy_geodetic`，并保持参考平面一致。
5. 载频越高，相同几何误差对应的相位误差越敏感，应相应检查星历、测站和光行时精度。
6. 示例中的 `scattering_spot` 会让周期特征更清晰；真实散射模型可能不会这么理想。
7. `snr_db` 越高，周期图越干净。评估鲁棒性时应降低 SNR 或加入更真实的系统误差。
8. 如果运行时间过长，先区分计算规模和显存问题：降低 Run 数量、Run 时长、PRF、连续波采样率或反演网格会直接减少计算量；只有显存不足时才调小回波 chunk。对 Chirp 小网格，过小的 `facet_chunk_size` 反而会因大量 GPU 小调用而变慢。
9. 如果要复现实验，保存顶层 pipeline JSON，并保留 `runs/<实验名>/configs/*.generated.json`。

## 12. 关于光行时加速与精度

早期实现按接收采样点逐个求解三事件光行时。每个采样点都要在 Python 层调用多次 `retarded_time()`、状态查询、范数计算和单位向量计算。样本数一大，主要耗时来自 Python 循环和重复函数调用，而不是光行时固定点迭代本身。

当前实现把整条接收时间轴作为数组批量处理：

1. 一次性批量求接收时刻对应的散射时刻。
2. 一次性批量求散射时刻对应的发射时刻。
3. 一次性批量计算目标、发射站、接收站位置。
4. 一次性批量计算距离和视线单位向量。

这仍然是同一个固定点方程、同一个 `tolerance_s`、同一个 `max_iter`，只是把逐点 Python 循环换成 NumPy 向量化数组运算。对 `static`、`linear`、`horizons_vectors` 插值状态和 `astropy_geodetic` 批量状态，数学结果应与逐点算法一致。开发验证中，线性/静态小样本与旧逐点算法逐项对比最大差异为 0。

为什么能快很多：以前每个样本都单独进入 Python 循环；现在每轮迭代用底层 C/NumPy 对整批样本计算，函数调用次数从“样本数 × 迭代次数”量级降为“迭代次数”量级。半小时到一分钟以内的提升在这种瓶颈结构下是合理的。

需要注意的边界：

- 向量化不是降低精度，也不是减少迭代阈值。
- 如果状态模型内部本身是低精度插值，最终精度仍受 `query_step_s` 和星历源限制。
- 如果真实实验要求更严，应对 `tolerance_s`、`query_step_s`、`sample_rate_hz` 做敏感性检查。
- 当前解的是小行星质心三事件几何；每个面元的精细路径在回波模块中近似处理，不等同于逐面元精确光行时解。

## 13. 常见问题

### 13.1 交互图在哪里打开

当前 GUI 固定通过系统浏览器打开 Plotly 交互图。若浏览器未自动弹出，可在 `.gui_state/previews/` 中打开对应的回波预览 HTML 文件。

### 13.2 点击中止后为什么输出目录还存在

中止只停止计算进程，不删除已生成的配置快照、输出或部分结果，以便保留现场。日志会记一条 `已中止：<阶段>`（警告级），阶段状态显示“已中止”，不会再报成失败、也不弹错误对话框；随后可重新点击 `运行当前阶段` 从头执行该阶段，或点击 `运行完整 pipeline` 重跑全部阶段。

### 13.3 为什么示例周期图只有真值附近一个明显峰

示例配置是干净、短链路、已知真值的仿真实验，且强散射斑会增强周期可辨识性；这不代表真实数据一定同样理想。真实雷达数据通常还需要下变频、匹配滤波或距离门、标定、平动补偿、异常点处理和误差建模。

### 13.4 能直接拿真实回波进反演吗

不能把未经处理的真实原始雷达数据直接等同于当前 `echo.npz`。当前反演输入假设已经是统一时间轴上的复基带 I/Q，并且具备必要元数据。真实数据需要先转换成与 `echo.npz` 兼容的数据格式，并完成相应预处理。

已经用本流水线生成过 `echo.npz` 时，可以跳过观测与回波：把 `实验名` 与 `输出目录` 指回那次 run，选择 `周期反演` 后点 `运行当前阶段`，日志会显示 `复用已有回波数据：…\echo\echo.npz`。反演设置取自当前 GUI 参数，因此重跑前请确认搜索范围（`period_min_s`/`period_max_s`）、`cpi_duration_s` 与该回波的采样参数、真值周期相匹配；当前回波有效配置与产物来源不一致时会阻断，而不是只给警告。

### 13.5 星历覆盖不足会怎样

如果内部星历安全余量仍不足以覆盖发射或散射时刻，程序会明确报出插值越界并停止，不会继续给出不可靠结果。此时应检查目标距离、观测窗口和时间原点；安全余量不再由 GUI 字段手工调节。

### 13.6 chirp 预览里的脉冲压缩二维图怎么读

第一幅是脉冲保存行的原始 `|iq|`：横轴是脉冲保存行内时间，纵轴是脉冲序号。点目标试例的带宽是 $1\,\mathrm{kHz}$，距离分辨约 $150\,\mathrm{km}$，快时间上看到的是发射包络本身。网格试例把带宽设为 $150\,\mathrm{MHz}$，距离分辨约 $1\,\mathrm{m}$，和百米级形体同量级；压缩后可以出现距离方向的结构，光滑凸体上更常见的是亮斑和展宽，而不是把直径均匀切成几十个一样亮的距离单元。

第二幅是同一批脉冲做匹配滤波后的二维距离像 `|MF|`：峰值抬高到约 $N$ 倍（$N$ 为脉冲占用的样点数），快时间方向由矩形变成主瓣宽度约 $1/B$ 的 sinc 形，旁瓣比主瓣低十几 dB，并延伸到整个保存行。第三幅是沿脉冲平均的一维距离像，橙色虚线是预计质心回波位置。三幅图的纵向包络都由目标姿态随自转的变化决定。

### 13.7 为什么关掉强散射斑后快时间幅度包络的周期可能只有真值的一半

`models/ellipsoid.obj` 由二十面体细分得到，顶点集合在绕自转轴旋转 180° 后与自身完全重合。当自转轴就是该对称轴、收发几何固定时，相隔半个自转周期的两个时刻照明到的面元集合、面元权重和面元相对路径完全相同，回波整体重复出现。此时从回波包络量到的周期是 `target.rotation_period_s` 的一半。`scattering_spot` 的作用正是打破这种几何对称性，使自转周期在回波中可辨识；做周期可辨识性实验时不要把它关掉。
